name:                poloniex-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gambolingpangolin/poloniex-api#readme
license:             BSD3
license-file:        LICENSE
author:              Ian Shipman 
maintainer:          ics@gambolingpangolin.com
copyright:           2017 Ian Shipman
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
    Network.Poloniex
    , Network.Poloniex.Api
    , Network.Poloniex.Push
    , Network.Poloniex.Types
  build-depends:       
    aeson
    , base >= 4.7 && < 5
    , containers
    , text

    , servant
    , servant-client
  default-language:    Haskell2010

test-suite poloniex-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       
    poloniex-api
    , aeson
    , base
    , containers
    , hspec
    , text

    , http-client-tls
    , servant-client
                     
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gambolingpangolin/poloniex-api
